# jukeboy-companion

./: README.md  design-doc.txt  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
doc/: android-build.md
src/: App.vue  main.ts  router.ts
src-tauri/: .unit-test-output.txt  Cargo.toml  companion_tests_state.json  tauri.conf.json
src-tauri/crates/jukeboy-companion-core/: Cargo.toml
src-tauri/crates/jukeboy-companion-core/src/: android_ble.rs  client.rs  error.rs  lib.rs  mock.rs  protocol.rs  service.rs  storage.rs
src-tauri/crates/jukeboy-companion-repl/: Cargo.toml
src-tauri/crates/jukeboy-companion-repl/src/: main.rs
src-tauri/crates/jukeboy-companion-tests/: Cargo.toml
src-tauri/crates/jukeboy-companion-tests/src/: main.rs
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/companion/: android_ble.rs  client.rs  error.rs  mock.rs  mod.rs  protocol.rs  service.rs  storage.rs
src/components/: AppShell.vue  ArtworkCover.vue  ConnectionGateDialog.vue  PlaybackStrip.vue
src/components/debug/: CommandPanel.vue
src/debug/: commands.ts
src/plugins/: vuetify.ts
src/services/: companion.ts  mockCompanion.ts
src/stores/: companion.ts
src/styles/: app.scss
src/utils/: artwork.ts  formatting.ts
src/views/: DashboardView.vue  SettingsView.vue
tests/e2e/: state-sync.spec.ts
tests/unit/: artwork-cover.test.ts  companion-command-queue.test.ts  companion-store-sync.test.ts
