[package]
name = "jukeboy-companion"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[workspace]
members = [
    "crates/jukeboy-companion-core",
    "crates/jukeboy-companion-repl",
    "crates/jukeboy-companion-tests",
]
default-members = ["."]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jukeboy_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
jukeboy-companion-core = { path = "crates/jukeboy-companion-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }

[target.'cfg(target_os = "android")'.dependencies]
jni019 = { package = "jni", version = "0.19" }
