[package]
name = "jukeboy-companion-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["rt", "sync", "time"] }
futures-util = "0.3"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"

[target.'cfg(not(target_os = "android"))'.dependencies]
btleplug = "0.12.0"

[target.'cfg(target_os = "android")'.dependencies]
jni019 = { package = "jni", version = "0.19" }
