[package]
name = "jukeboy-companion-repl"
version = "0.1.0"
edition = "2021"

[dependencies]
jukeboy-companion-core = { path = "../jukeboy-companion-core" }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

[[bin]]
name = "jukeboy-companion-repl"
path = "src/main.rs"
